# learning-projects

./: README.md
computer-architecture/compute_sines_table/: compute_sines_table.c
computer-architecture/function_ptr/: function_ptr.c
computer-architecture/increment_ptr/: increment_ptr.c
computer-architecture/linked_list/: linked_list.c
cpl/ex1_10/: ex1_10.c
cpl/ex1_14/: ex1_14.c
cpl/ex1_15/: ex1_15.c
cpl/ex1_20/: ex1_20.c
cpl/ex1_21/: ex1_21.c
cpl/ex1_3/: ex1_3.c
cpl/ex1_6/: ex1_6.c
cpl/ex1_7/: ex1_7.c
cpl/ex2_3/: ex2_3.c
cpl/ex4_1/: ex4_1.c
haskell-programming-from-first-principles/: readme.md
haskell-programming-from-first-principles/chapter15/: exercise.hs
haskell-programming-from-first-principles/chapter16/: ReplaceExperiment.hs
haskell-programming-from-first-principles/chapter17/: exercise.hs
haskell-programming-from-first-principles/chapter18/: BadMonad.hs  exercise.hs
haskell-programming-from-first-principles/chapter2/: exercise.hs
haskell-programming-from-first-principles/chapter22/: PrettyReader.hs
haskell-programming-from-first-principles/chapter23/: RandomExample2.hs  exercise.hs
haskell-programming-from-first-principles/chapter24/: BT.hs  Data.Ini.hs  Text.Fractions.hs  exercise.hs
haskellProgrammingFromFirstPrinciples/chapter14/exercise/: exercise.cabal
haskellProgrammingFromFirstPrinciples/chapter14/exercise/src/: Exercise.hs
haskellProgrammingFromFirstPrinciples/chapter14/exercise/tests/: WordNumberTest.hs
jlox/: build.gradle.kts  settings.gradle.kts
lisp-interpreter/: build.gradle  settings.gradle
(+159 files in other folders)
