name:                exercise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exercise#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:    Exercise
                    , WordNumber
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.7 && <5
                    , hspec
                    , QuickCheck
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  hs-source-dirs:     tests
  build-depends:      base
                    , exercise
                    , hspec
                    , QuickCheck
  default-language:   Haskell2010


